# origami

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLI.md  LICENSE  README.md  model.origami  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
docformer/: data.py  eval.py  eval_batch.py  json.py  utils.py
docformer/data/: __init__.py  df_dataset.py  encoder.py  pipes.py  utils.py
experiments/: README.md  train_codenet.py
experiments/codenet/: .env.local  README.md  guild.yml  train.py
experiments/ddxplus/: .env.local  README.md  guild.yml  run_baseline.py  run_origami.py  utils.py
experiments/json2vec/: README.md  flags.yml  guild.yml  run_baseline.py  run_lightgbm.py  run_origami.py  run_rf.py  run_xgboost.py  runner.py
experiments/prediction/: README.md  flags.yml  guild.yml  run_baseline.py  run_logreg.py  run_origami.py  runner.py  utils.py
notebooks/: dungeon-results.ipynb  example_dungeons.ipynb  example_dungeons_dataset.ipynb  example_origami_dungeons.ipynb  example_origami_mc_ce.ipynb  example_origami_ontime_ce.ipynb  example_origami_openml.ipynb  example_rf_dungeons.ipynb  playground.ipynb  train_on_docs.ipynb  train_on_docs_codenet.ipynb  train_on_json.ipynb
origami/cli/: embed.py  generate.py  main.py  predict.py  train.py  utils.py
origami/datasets/: dungeons.py
origami/inference/: __init__.py  autocomplete.py  batch_sampler.py  embedder.py  mc_estimator.py  metrics.py  predictor.py  rejection_estimator.py  sampler.py
origami/model/: __init__.py  gpt_base.py  gpt_torch.py  origami.py  positions.py  vpda.py
origami/preprocessing/: __init__.py  encoder.py  pipelines.py  pipes.py  utils.py
origami/utils/: __init__.py  common.py  config.py  guild.py  query_utils.py
planning/: origami-embed-command.md
storm_ml/: eval_batch.py  json.py  positions.py  storm.py  vpda.py
storm_ml/cli/: generate.py  main.py  predict.py  train.py  utils.py
storm_ml/data/: encoder.py  pipelines.py  pipes.py  utils.py
storm_ml/datasets/: dungeons.py
storm_ml/inference/: autocomplete.py  batch_sampler.py  embedder.py  metrics.py  predictor.py
storm_ml/model/: __init__.py  gpt2.py  gpt_base.py  gpt_torch.py  llama.py  vpda.py
storm_ml/models/: __init__.py  gpt2.py  llama.py  storm.py
storm_ml/preprocessing/: __init__.py  encoder.py  pipelines.py  pipes.py  utils.py
storm_ml/utils/: __init__.py  common.py  config.py
tests/: test_positions.py  test_utils.py  test_vpda.py
tests/cli/: test_utils.py
tests/data/: test_df_dataset.py  test_encoder.py  test_pipeline.py  test_pipes.py  test_utils.py
tests/inference/: test_mc_estimator.py  test_rejection_estimator.py  test_sampler.py
tests/model/: test_positions.py  test_vpda.py
tests/preprocessing/: test_df_dataset.py  test_encoder.py  test_pipeline.py  test_pipelines.py  test_pipes.py  (+1 more)
(+36 files in other folders)
